--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/webBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webBuild.data.br",
-        frameworkUrl: buildUrl + "/webBuild.framework.js.br",
-        codeUrl: buildUrl + "/webBuild.wasm.br",
+        dataUrl: buildUrl + "/webBuild.data",
+        frameworkUrl: buildUrl + "/webBuild.framework.js",
+        codeUrl: buildUrl + "/webBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "test2d",
