--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webBuild.loader.js";
+      var loaderUrl = buildUrl + "/unityTest.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webBuild.data",
-        frameworkUrl: buildUrl + "/webBuild.framework.js",
-        codeUrl: buildUrl + "/webBuild.wasm",
+        dataUrl: buildUrl + "/unityTest.data",
+        frameworkUrl: buildUrl + "/unityTest.framework.js",
+        codeUrl: buildUrl + "/unityTest.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "test2d",
